fix broken style.css

--- a/www/style.css
+++ b/www/style.css
@@ -477,9 +477,6 @@ select#filter-selector option:hover {
 .ease-in {
   transition-timing-function: ease-in;
 }
-.transform {
-  /* enables transform animations */
-}
 .opacity-100 {
   opacity: 1 !important;
 }
@@ -660,7 +657,7 @@ span.shuffle-count {
   }
   .filter-select { margin-left: auto; }
 
-  .item { box-shadow: 0px 4px 15px -5px var(--card-shadow-color !important); max-width: 100%; border-radius: 10px; margin: 1em auto; float: none; }
+  .item { box-shadow: 0px 4px 15px -5px var(--card-shadow-color) !important; max-width: 100%; border-radius: 10px; margin: 1em auto; float: none; }
   .modal-content { border-radius:10px; }
   .itemtitle { font-size: 1.25rem !important;
     padding: 1em 3rem 0.5em 0.75em;
@@ -681,7 +678,7 @@ span.shuffle-count {
   body, html { font-size: 16px; }
   p { font-size: 1rem !important; line-height: 1.5 !important; }
   .pubdate,.itemfrom { padding-right: 0.5em; }
-  .item { box-shadow: 1px 1px 50px 1px var(--card-shadow-color !important); max-width: 90%; border-radius: 30px; margin: 1.5em auto; float: none; }
+  .item { box-shadow: 1px 1px 50px 1px var(--card-shadow-color) !important; max-width: 90%; border-radius: 30px; margin: 1.5em auto; float: none; }
   .itemtitle { font-size: 1.5rem !important;
     padding: 0.75em 2.5rem 0.2em 1.2em;
     min-height: calc(1.4em * 3);
@@ -748,4 +745,5 @@ span.shuffle-count {
 }
 @media (min-width: 481px) and (max-width: 767px) {
   .modal-content { width: 90%; }      /* .item max-width:90% */
+}
 }
